@@ -224,3 +224,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20040527 timings.c: small timing tweak for 128K machines; we now match
 	 the timines for (at least some!) 48K/128K machines.
 20040527 szx.c: Write scld block when machine has SE memory capability.
+20040601 libspectrum.c,libspectrum.h.in: Add LIBSPECTRUM_CLASS_CARTRIDGE_IF2
+         and LIBSPECTRUM_ID_CARTRIDGE_IF2.
